crates/pardosa-schema/tests/compile_fail/ref_str_genome_safe.rs
use pardosa_schema::GenomeSafe;
fn main() {
    let _ = <&str as GenomeSafe>::SCHEMA_HASH;
}
