crates/pardosa-schema/tests/compile_fail/ref_str_genome_safe.stderr
error[E0277]: the trait bound `&str: GenomeSafe` is not satisfied
 --> tests/compile_fail/ref_str_genome_safe.rs:3:14
  |
3 |     let _ = <&str as GenomeSafe>::SCHEMA_HASH;
  |              ^^^^ the trait `GenomeSafe` is not implemented for `&str`
  |
  = help: the following other types implement trait `GenomeSafe`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
            (T0, T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
